# GraduationProject

./: .gitignore  README.md  pyproject.toml
checkpoints/mend/: qwen3-4b_editor.pt
configs/: paths.yml
configs/models/: gpt-j-6b.yml  gpt2-xl.yml  qwen3-4b.yml
custom_requests/: custom_rewrites_1200.json
results/FT/run_000/: 100_edits-case_0.json  100_edits-case_1.json  100_edits-case_10.json  100_edits-case_100.json  100_edits-case_1000.json  100_edits-case_1001.json  100_edits-case_1002.json  100_edits-case_1003.json  100_edits-case_1004.json  100_edits-case_1005.json  100_edits-case_1006.json  100_edits-case_1007.json  100_edits-case_1008.json  100_edits-case_1009.json  100_edits-case_101.json  100_edits-case_1010.json  100_edits-case_1011.json  100_edits-case_1012.json  100_edits-case_1013.json  100_edits-case_1014.json  100_edits-case_1015.json  100_edits-case_1016.json  100_edits-case_1017.json  100_edits-case_1018.json  100_edits-case_1019.json  100_edits-case_102.json  100_edits-case_1020.json  100_edits-case_1021.json  100_edits-case_1022.json  100_edits-case_1023.json  100_edits-case_1024.json  100_edits-case_1025.json  100_edits-case_1026.json  100_edits-case_1027.json  100_edits-case_1028.json  100_edits-case_1029.json  100_edits-case_103.json  100_edits-case_1030.json  100_edits-case_1031.json  100_edits-case_1032.json  (+1160 more)
results/FT/run_001/: 100_edits-case_0.json  100_edits-case_1.json  100_edits-case_10.json  100_edits-case_100.json  (+1196 more)
scripts/: run_qwen_baselines.py  train_qwen_mend.py  tune_qwen_memit.py
src/memit_project/: __init__.py
(+24011 files in other folders)
